--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,22 @@
-body {
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+*, *::after, *::before {
+  box-sizing: border-box;
+}
 
+body {
+  text-align: left;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.container{
+  max-width: 1300px;
+  width: 90%;
+  margin: auto;
+}
+
+.post {
+  border: solid 2px #333;
+  border-radius: .3rem;
+  padding: 2rem;
+  margin: auto;
+  box-shadow: 1px 1px 2px #555;
 }
