--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 *, *::after, *::before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   text-align: left;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+  background-color: #333;
+  color: #ddd;
+  margin-bottom: 3rem;
 }
 
 .container{
