--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ header {
   color: #ddd;
   margin-bottom: 3rem;
 }
+header h1{
+  padding: .5rem;
+}
 
 .container{
   max-width: 1300px;
@@ -27,4 +30,30 @@ header {
   padding: 2rem;
   margin: auto;
   box-shadow: 1px 1px 2px #555;
+}
+
+.navbar {
+  display: flex;
+  background-color: #555;
+}
+
+.navbar-list-group{
+  display: flex;
+  justify-content: space-between;
+  color: #ddd;
+}
+
+.navbar-list-item{
+  display: block;
+  color: #ddd;
+}
+.navbar-list-link{
+  display: block;
+  padding: 1rem;
+  color: #ddd;
+  text-decoration: none;
+  font-weight: 700;
+}
+.navbar-list-link:hover{
+  color: #aaa;
 }
